pkg/gox/testdata/errors/malformed_child_expression.gox
package main

func App() any {
	return <main>{count +}</main>
}
